<resources>
    <string name="app_name">CoupleCat</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="nomor">Nomor Handphone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Pesan</string>
    <string name="title_information">Informasi</string>
    <string name="title_account">Akun</string>
    <string name="title_couple">Pasangan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_contest">MyContestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_ticket">MyTicketActivity</string>
    <string name="title_activity_my_schedule">MyScheduleActivity</string>
    <string-array name="jenispembayaran">
        <item>Pilih Jenis</item>
        <item>Saldo</item>
        <item>Upload Resi</item>
    </string-array>
    <string-array name="catlist">
        <item>Abyssinian</item>
        <item>Aegean</item>
        <item>American Bobtail</item>
        <item>American Curl</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Arabian Mau</item>
        <item>Australian Mist</item>
        <item>Balinese</item>
        <item>Bambino</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>Bombay</item>
        <item>British Longhair</item>
        <item>British Shorthair</item>
        <item>Burmese</item>
        <item>Burmilla</item>
        <item>California Spangled</item>
        <item>Chantilly-Tiffany</item>
        <item>Chartreux</item>
        <item>Chausie</item>
        <item>Cheetoh</item>
        <item>Colorpoint Shorthair</item>
        <item>Cornish Rex</item>
        <item>Cymric</item>
        <item>Cyprus</item>
        <item>Devon Rex</item>
        <item>Donskoy</item>
        <item>Dragon Li</item>
        <item>Egyptian Mau</item>
        <item>European Burmese</item>
        <item>Exotic Shorthair</item>
        <item>Havana Brown</item>
        <item>Himalayan</item>
        <item>Japanese Bobtail</item>
        <item>Javanese</item>
        <item>Khao Manee</item>
        <item>Korat</item>
        <item>Kurilian</item>
        <item>LaPerm</item>
        <item>Maine Coon</item>
        <item>Malayan</item>
        <item>Manx</item>
        <item>Munchkin</item>
        <item>Nebelung</item>
        <item>Norwegian Forest Cat</item>
        <item>Ocicat</item>
        <item>Oriental</item>
        <item>Persian</item>
        <item>Pixie-bob</item>
        <item>Ragamuffin</item>
        <item>Ragdoll</item>
        <item>Russian Blue</item>
        <item>Savannah</item>
        <item>Scottish Fold</item>
        <item>Selkirk Rex</item>
        <item>Siamese</item>
        <item>Siberian</item>
        <item>Singapura</item>
        <item>Snowshoe</item>
        <item>Somali</item>
        <item>Sphynx</item>
        <item>Tonkinese</item>
        <item>Toyger</item>
        <item>Turkish Angora</item>
        <item>Turkish Van</item>
        <item>York Chocolate</item>

    </string-array>
</resources>
