<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:background="@drawable/bg_overlay_splash"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".Activity.MyAccountActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/bg_kucing_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChangeFotoProfile"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/bluePrimaryDark"
        android:fontFamily="@font/mmedium"
        android:layout_marginTop="10dp"
        android:text="Ganti Foto Profil"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/mlight"
            android:text="Nama"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:height="50dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:hint="@string/nama"
            android:lines="1"
            android:paddingLeft="12dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/mlight"
            android:text="@string/nomor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNomor"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:hint="@string/nomor"
            android:lines="1"
            android:paddingLeft="12dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/mlight"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="3"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:hint="@string/email"
            android:paddingLeft="12dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"

            android:id="@+id/lyBack"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_back" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/mmedium"
            android:text="Perbarui"
            android:id="@+id/btnUpdate"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
</ScrollView>